# SensorFlow-Model

./: .gitignore  README.md  convergence_history.json  convergence_history_20.json  convergence_history_30.json  convergence_history_40.json  convergence_history_50.json  fedper_convergence_50rounds.json  fedprox_convergence_history_10.json  fedrep_eval_history_20.json  fedrep_train_history_10.json  fedrep_train_history_20.json  final_model.keras  final_model.pt  final_model.tflite  metrics_over_rounds.csv  mohit_flwr  mohit_flwr.pub  norm_ear.json  norm_watch.json  normalization.json  pyproject.toml
Data/Client_1/: AnushkaSittingDCwBuffer.csv  AnushkaSittingDWwBuffer.csv  AnushkaSittingTypingwBuffer.csv  AnushkaSittingWritingwBuffer.csv  AnushkaStandingWBwBuffer.csv  Copy of Copy of Anindita_sitting_scrolling.csv  Copy of Copy of Anindita_sitting_talking.csv  Copy of Copy of Anindita_sitting_typing.csv  Copy of Copy of Anindita_sitting_writing.csv  Copy of Copy of Anindita_standing_dc.csv  Copy of Copy of Anindita_standing_erase.csv  Copy of Copy of Anindita_standing_talking.csv  Copy of Copy of Anindita_standing_writing.csv  MohitSittingWritingwBuffer.csv  (+4 more)
TestData/: Copy of Copy of Pulkit_sitting_dc.csv  Copy of Copy of Pulkit_sitting_typing.csv  Copy of Copy of Pulkit_standing_dc.csv  Copy of Copy of Pulkit_standing_dw.csv
sensorflow_model/: Research_Pipeline.ipynb  client_app.py  client_app_encrypt.py  data_visualizaton.ipynb  dataset.py  demo.ipynb  export_tflite.py  personalize.py  plots.ipynb  server_app.py  server_app_decrypt.py  task.py  testing.ipynb
(+105 files in other folders)
