[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sensorflow-model"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets[vision]>=0.5.0",
    "tensorflow>=2.11.1,<2.18.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "demo"

[tool.flwr.app.components]
serverapp = "sensorflow_model.server_app:app"
clientapp = "sensorflow_model.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
local-epochs = 1
batch-size = 32
verbose = false


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 4
